# pybuildc

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
examples/test/: pybuildc.toml
examples/test/src/: main.c
examples/test/src/module/: test.c  test.h
pybuildc/: .null-ls_777905_compiler.py  __version__.py  args.py  build.py  builder.py  cache.py  commands.py  compiler.py  config.py  context.py  dependencies.py  dependency.py  files.py  main.py  new.py  types.py
pybuildc/builder/: build.py
pybuildc/commands/: __init__.py  build.py  clean.py  cmd.py  new.py  run_cmd.py  script.py  tests.py
pybuildc/config/: __init__.py  cache.py  config.py  dependencies.py
pybuildc/domain/: .null-ls_814785_config.py  builder.py  compiler.py  config.py  context.py  entities.py  scripts.py  services.py
