[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pybuildc"
authors = [
    {name = "Loris Kriyonas", email = "loris.kriyonas@gmail.com"},
]
description = "A Build system for the C language"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["c"]
dependencies = [
    "returns",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]


[project.scripts]
pybuildc = "pybuildc.main:main"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
